--- a/PackagingLog.html
+++ b/PackagingLog.html
@@ -1,17 +1,17 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -o PAMImageTools -W 'WinMain:PAMImageTools,version=1.0' -T link:exe -d D:\PAMDatagxpt\ImageDesignerTools\main\for_testing -R '-logfile,PALog' -v D:\PAMDatagxpt\ImageDesignerTools\main.mlapp -r 'C:\Program Files\MATLAB\R2023a\toolbox\compiler\packagingResources\default_icon.ico' </font>
+<font color=blue>mcc -o PAMImageTools -W 'WinMain:PAMImageTools,version=2.0' -T link:exe -d E:\PAMDatagxpt\ImageDesignerTools\main\for_testing -R '-logfile,PALog' -v E:\PAMDatagxpt\ImageDesignerTools\main.mlapp -r E:\PAMDatagxpt\ImageDesignerTools\main_resources\icon.ico </font>
 Compiler version: 8.6 (R2023a)
 
 Analyzing file dependencies. 
 
-Parsing file "D:\PAMDatagxpt\ImageDesignerTools\main.mlapp"
+Parsing file "E:\PAMDatagxpt\ImageDesignerTools\main.mlapp"
 	(referenced from command line).
-Generating file "D:\PAMDatagxpt\ImageDesignerTools\main\for_testing\readme.txt".
+Generating file "E:\PAMDatagxpt\ImageDesignerTools\main\for_testing\readme.txt".
 
 <font color=blue>正在打包...</font>
 Creating the bundle...
 Creating the install agent URL file...
-Web based installer created at D:\PAMDatagxpt\ImageDesignerTools\main\for_redistribution\MyAppInstaller_web.exe.
+Web based installer created at E:\PAMDatagxpt\ImageDesignerTools\main\for_redistribution\MyAppInstaller_web.exe.
 Packaging complete.
-Elapsed packaging time was: 15 seconds.
+Elapsed packaging time was: 16 seconds.
 </pre></html>
